--- a/Semana2/PlanetaPastel_Usuario.html
+++ b/Semana2/PlanetaPastel_Usuario.html
@@ -116,6 +116,19 @@
           <input type="Button" value="Hacer pedido" />
         </a></article>
     </section>
-    <footer>Contacto: 55-1234-5678                 Fb: PasteleriaPlanetaPastel</footer>
+    <footer>
+        <table>
+            <tr >
+                <th >Contacto</th>
+                <th>Dirección</th>
+                <th>Horario</th>
+            </tr>
+            <tr>
+                <td>55-1234-5678</td>
+                <td>Saturno, 5, 01234, México </td>
+                <td>10:00 hr - 19:00 hr</td>
+            </tr>
+        </table>
+    </footer>
   </body>
 </html>
