--- a/JS/pokedex.html
+++ b/JS/pokedex.html
@@ -32,12 +32,57 @@
                         <div class="refrigeracion1"></div>
                     </div>
                 </div>
-                <button class="botonScreen" onclick="fetchPokemon()">Cambiar</button><input type="text" placeholder="pikachu" id="pokeName" name="pokeName"><br>
+                <div class="botonScreen"></div>
                 <div class="screen">
                 <img class="imagen" src="./images/pokeBola.png" alt="Pokemon" id="pokeImg">
                 </div>
             </div>
+            <button class="botonBlue" onclick="fetchPokemon()">Cambiar</button>
+            <div class="botonmenuVerde"></div>
+            <div class="botonmenuNaranja"></div>
+            <div class="cruzdown"></div>
+            <div class="cruzup"></div>
+            <div class="screenName"></div>
         </div>
+        <div class="limite">
+            <div class="bandUp"></div>
+            <div class="bandDown"></div>
+        </div>
+    </div>
+    <div class="mainright">
+        <div class="topUpright"></div>
+        <input class="screenright" type="text" placeholder="Ingrese el nombre de su Pokemon" id="pokeName" name="pokeName">
+        <div class="botonesmenu">
+            <div class="bordeBoton"></div>
+            <div class="botn1"></div>
+            <div class="botn2"></div>
+            <div class="botn3"></div>
+            <div class="botn4"></div>
+            <div class="botn5"></div>
+            <div class="botn6"></div>
+            <div class="botn7"></div>
+            <div class="botn8"></div>
+            <div class="botn9"></div>
+        </div>
+        <div class="botn10"></div>
+        <div class="botn11"></div>
+        <div class="botn12"></div>
+        <div class="botn13"></div>
+        <div class="botn14">
+            <div class="cuerpoflechaIz"></div>
+            <div class="cabezaflechaIz"></div>
+        </div>
+        <div class="botn15">
+            <div class="cuerpoflechaDe"></div>
+            <div class="cabezaflechaDe"></div>
+        </div>
+        <div class="botn16">
+            <div class="cuerpoflechaIzBut"></div>
+            <div class="cabezaflechaIzBut"></div>
+            <div class="colita"></div>
+        </div>
+        <div class="screen1"></div>
+        <div class="screen2"></div>
     </div>
 </body>
 <footer>
